--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@
 :root{
 	--fontColor1: #404040;
 	--fontColor2: #666464;
+	--fontColor3: #ffffff;
 	--pointColor:#4673a1;
 }
 :root{-webkit-tap-highlight-color:transparent;-webkit-text-size-adjust:100%;text-size-adjust:100%;cursor:default;line-height:1.5;overflow-wrap:break-word;word-break:break-word;tab-size:4;}
@@ -81,7 +82,8 @@ textarea:-moz-placeholder{color:#7d7d7d;font-size:14px;font-weight:normal;}
 body{overflow-y:hidden;}
 .wrapper{width:100%;min-width:1600px;}
 header.header{width:100%;min-width:1500px;height:100px;display:flex;border-bottom:1px solid #b3b3b3;position:fixed;position:fixed;top:0;z-index:50;}
-.header .logo_div{width:270px;height:100px;background:#2e3144;padding-top:28px;padding-left:18px;flex-shrink:0;}
+.header .logo img{margin: 0 auto;}
+.header .logo_div{width:270px;height:100px;background:#2e3144;padding-top:28px;flex-shrink:0;}
 .header .top_div{flex-grow:1;position:relative;}
 .loca{position:absolute;left:50px;top:35px;transition:0.15s;}
 .loca li{background:url(../images/bar_loca.png) no-repeat 0 center;padding-left:18px;margin-left:9px;float:left;font-size:20px;color:#878787;}
@@ -104,21 +106,21 @@ header.header{width:100%;min-width:1500px;height:100px;display:flex;border-botto
 .left_nav li{width:100%;}
 .left_nav li a{display:block;width:100%;height:inherit;position:relative;height:61px;}
 .left_nav li a span{font-size:20px;font-weight:normal;position:absolute;top:50%;transform:translate(0, -50%);line-height:1;overflow-wrap:break-word;word-break:break-word;}
-.depth1{padding-left:16px;color:#fff;background:#242632;border-bottom:1px solid #32455e;}
+.depth1{padding-left:16px;color:#fff;background:#242632;border-bottom:1px solid #989898;}
 .depth1::after{content:'';display:inline-block;width:9px;height:5px;background:url(../images/arr_nav_fold.png) no-repeat 0 0;position:absolute;top:27px;right:21px;}
 .depth1 span{left:20px;width:calc(100% - 52px);}
 
-.depth1:hover{background:#fff;color:var(--pointColor);}
+.depth1:hover{background:#242632;color:var(--fontColor3);}
 .depth1:hover::after{background-image:url(../images/arr_nav_unfold.png);}
 .depth1:hover span{font-weight:bold;}
 
-.depth1.on{background:#fff;color:var(--pointColor);}
+.depth1.on{background:#242632;color:var(--fontColor3);}
 .depth1.on::after{background-image:url(../images/arr_nav_unfold.png);}
 .depth1.on span{font-weight:bold;}
-.depth2{background:#f4f4f4;border-bottom:1px solid #6c96c0;padding-left:25px;}
+.depth2{background:#464856;border-bottom:1px solid #989898;padding-left:25px;}
+.depth2.on, .depth2:hover{background:#696b78;}
 .depth2::before{content:'';display:inline-block;vertical-align:middle;width:5px;height:9px;background:url(../images/bar_nav_depth2.png) no-repeat 0 center;position:absolute;top:50%;left:25px;transform:translate(0, -50%);}
-.depth2 span{color:var(--fontColor2);left:40px;}
-.depth2.on span{color:#000;}
+.depth2 span{color:var(--fontColor3);left:40px;}
 .depth2_div{display:none;}
 .on+.depth2_div{display:block;}
 
@@ -189,17 +191,11 @@ input.ipt_date{width:113px;width:calc(100% - 38px);margin-right:9px;text-align:c
 }
 
 
-.gc-columnHeader-highlight {
-  background-color: #f4f4f4;
-}
-
-.gc-rowHeader-highlight {
-  background-color: #f4f4f4;
-}
-.gc-columnHeader-hover {
-  background-color: #f4f4f4;
-}
-
-.gc-rowHeader-hover {
+.gc-columnHeader-highlight,
+.gc-rowHeader-highlight,
+.gc-columnHeader-hover,
+.gc-rowHeader-hover,
+.gc-columnHeader-selected,
+.gc-rowHeader-selected {
   background-color: #f4f4f4;
 }
