--- a/views/ejs/sample10.ejs
+++ b/views/ejs/sample10.ejs
@@ -1,11 +1,11 @@
 <div class="content_top">
     <div class="cont_tit">인사평가 진행 현황</div>
     <div class="div">
-      <button class="btn_search">
-        <span id="addRow">행추가</span>
+      <button id="addRow" class="btn_search">
+        <span>행추가</span>
       </button>
-      <button class="btn_search">
-        <span id="saveRow">저장</span>
+      <button id="saveRow" class="btn_search">
+        <span>저장</span>
       </button>
       <button class="btn_search">
         <i class="ico_srch"></i>
