[그리드 선택 색상 변경]

--- a/views/ejs/sample2.ejs
+++ b/views/ejs/sample2.ejs
@@ -62,6 +62,9 @@
     fill: #242632;
     font-weight: bold;
 }
+.wj-cells .wj-cell.wj-state-multi-selected{
+  background: #696b78;
+}
 </style>
 
 <script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.selector.min.js" type="text/javascript"></script>
