타이틀 보완

--- a/views/ejs/sample9.ejs
+++ b/views/ejs/sample9.ejs
@@ -1,5 +1,5 @@
 <div class="content_top">
-    <div class="cont_tit">대리점별매출실적</div>
+    <div class="cont_tit">장려금/수당관리</div>
     <div class="div">
         <button class="btn_search">
         <i class="ico_srch"></i>
