타이틀 변경

--- a/views/ejs/sample10.ejs
+++ b/views/ejs/sample10.ejs
@@ -1,5 +1,5 @@
 <div class="content_top">
-    <div class="cont_tit">인사평가 진행 현황</div>
+    <div class="cont_tit">주간일보관리</div>
     <div class="div">
       <button id="addRow" class="btn_search">
         <span>행추가</span>
