--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -7,6 +7,9 @@
         <button id="btnGrid" class="btn_search">
             <span>출고요청서</span>
         </button>
+        <button id="btnGrid2" class="btn_search">
+            <span>배송내역서</span>
+        </button>
     </div>
 </div>
 
@@ -33,6 +36,9 @@ window.onload = function() {
     $('#btnGrid').on('click', function(e){
         location.href = '/sample?depth1=OMS&depth2=출고요청서&sampleId=11';
     });
+    $('#btnGrid2').on('click', function(e){
+        location.href = '/sample?depth1=OMS&depth2=배송내역서&sampleId=21';
+    });
 
 	// host the workbook control in a DIV element with id "ss"
 	var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), {
@@ -40,7 +46,13 @@ window.onload = function() {
 	});
     
     spread.suspendPaint();
-	initSpread(spread);
+	
+    var localStorageIndex = "<%= sample23Index %>";
+    if(localStorageIndex == '-1') {
+        initSpreadDefault(spread);
+    } else {
+        spread.fromJSON(JSON.parse(localStorage.getItem('sample23Json' + localStorageIndex)));
+    }
     spread.resumePaint();
 
     document.getElementById('btnExcel').onclick = function () {
@@ -64,7 +76,7 @@ window.onload = function() {
     };
 };
 
-function initSpread(spread) {
+function initSpreadDefault(spread) {
     fetch('json/Sample15.ssjson')
     .then(response => {
         return response.json();
@@ -207,7 +219,6 @@ function initSpread(spread) {
 
         sheet.getRange(startCell2 + 1, 0, data2.length + 3, 7).hAlign(GC.Spread.Sheets.HorizontalAlign.center);
         
-        console.log(startCell2);
         sheet.addSpan(startCell2 + 1, 1, 1, 2); 
         sheet.addSpan(startCell2 + 1, 3, 1, 2); 
         sheet.addSpan(startCell2 + 1, 6, 1, 2);
@@ -216,8 +227,6 @@ function initSpread(spread) {
         var lineBorder = new GC.Spread.Sheets.LineBorder('black', lineStyle);
         sheet.getRange(startCell2 + 1, 0, data1.length + 2 , 8).setBorder(lineBorder, { all: true });
         
-
-
         return;
     });
 }
