--- a/views/ejs/sample21.ejs
+++ b/views/ejs/sample21.ejs
@@ -30,7 +30,7 @@
             <td>
                 <input type="text" value="">
             </td>
-            <th>작성번호</th>
+            <th>작성자</th>
             <td>
                 <input type="text" value="">
             </td>
