[베타 메시지(Sample1), CDN 변경(Sample5)]

--- a/views/ejs/sample1.ejs
+++ b/views/ejs/sample1.ejs
@@ -142,6 +142,7 @@ var dataTemplate = [
 ]
 
 window.onload = function () {
+    alert('현재 베타 서비스 운영중으로 기능에 제약이 있을 수 있습니다.');
     var mainSpread = new GC.Spread.Sheets.Workbook(document.getElementById("ss"));
     var dataManager = mainSpread.dataManager();
     tables.order = dataManager.addTable("orderTable", {
